fixed text alignment and added link to first project

--- a/style1.css
+++ b/style1.css
@@ -1,148 +1,134 @@
-html, body, .container {
-  height: 100%;
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
+html,
+body,
+.container {
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
-
 body {
-  background: no-repeat center center fixed;
-  background-image: url(http://cdn.pcwallart.com/images/atlanta-skyline-wallpaper-1.jpg);
-  background-size: cover;
-  margin-bottom: 0px;
-  padding: 0px;
-  border: 0px;
-  text-align: center;
-  font-family: 'Dosis', sans-serif;
+    background: no-repeat center center fixed;
+    background-image: url(http://cdn.pcwallart.com/images/atlanta-skyline-wallpaper-1.jpg);
+    background-size: cover;
+    margin-bottom: 0px;
+    padding: 0px;
+    border: 0px;
+    text-align: center;
+    font-family: 'Dosis', sans-serif;
 }
-
 #intro {
-  background-color: none;
-  background: no-repeat center center;
-  /* opacity: 0.5; */
-  height: 100%;
-  width: 100%;
-  line-height: 100%;
-  position: relative;
-}
+    background-color: none;
+    background: no-repeat center center;
+    /* opacity: 0.5; */
 
+    height: 100%;
+    width: 100%;
+    line-height: 100%;
+    position: relative;
+}
 #intro img {
-  height: auto;
-  width: auto;
+    height: auto;
+    width: auto;
 }
-
 #about-me, #portfolio {
-  background-color: #151417;
-  position: relative;
-  clear: both;
-  padding: 0 17%;
-  padding-bottom: 20px;
-  color: silver;
+    background-color: #151417;
+    position: relative;
+    clear: both;
+    padding: 0 17%;
+    padding-bottom: 20px;
+    color: silver;
 }
-
 #portfolio img {
-  border-radius: ;
+    border-radius: ;
 }
-
 #contact {
-  min-height: 30em;
+    min-height: 30em;
 }
-
-#skills, #contact {
-  background-color: #727776;
-  position: relative;
-  clear: both;
-  padding: 0 17%;
-  padding-bottom: 20px;
+#skills,
+#contact {
+    background-color: #727776;
+    position: relative;
+    clear: both;
+    padding: 0 17%;
+    padding-bottom: 20px;
 }
-
 #skills ul {
-  text-align: center;
+    text-align: center;
 }
-
 #intro h1 {
-  padding-top: 35px;
-  font-weight: 400;
-  font-size: 50px;
-  margin-bottom: 5px;
-  color: #D21D1D;
+    padding-top: 35px;
+    font-weight: 400;
+    font-size: 50px;
+    margin-bottom: 5px;
+    color: #D21D1D;
 }
 
+.languages, .tools{
+    text-align: center;
+}
 hr {
-  border: 0;
-  height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  width: 50%;
+    border: 0;
+    height: 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid gray;
+    width: 50%;
 }
-
 h1 {
-  padding-top: 50px;
-  font-weight: 400;
-  font-size: 50px;
-  margin: 0px;
-  color: rgba(146, 17, 17, 0.97);
+    padding-top: 50px;
+    font-weight: 400;
+    font-size: 50px;
+    margin: 0px;
+    color: rgba(146, 17, 17, 0.97);
 }
-
 h2 {
-  font-weight: 300;
-  font-size: 25px;
-  margin: 25px;
+    font-weight: 300;
+    font-size: 25px;
+    margin: 25px;
 }
-
 #navWrap {
-   height: 30px;
+    height: 30px;
 }
-
 #nav {
-   max-width: 100%;
-   max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
-
 #nav ul {
-   margin: 0;
-   padding: 0;
+    margin: 0;
+    padding: 0;
 }
-
 #nav li {
-   float: center;
-   padding: 3px 3px;
-   color: #F00;
-   list-style-type: none;
+    float: center;
+    padding: 7px 7px;
+    color: #F00;
+    list-style-type: none;
+    font-size: 2em;
 }
-
 #nav li a {
-   color: #F00;
-   text-decoration: none;
+    color: #F00;
+    text-decoration: none;
 }
 #nav li a:hover {
-   text-decoration: underline;
+    text-decoration: underline;
 }
-
-
-.skill-list li {
-  list-style: none;
-  padding-right: 0px;
+.skill-list {
+    list-style:none;
+    padding-left:0;
 }
-
 ul {
-  margin: 0px;
+    margin: 0px;
 }
-
 .profile-img {
-  border: 5px solid #87C1AF;
-  border-radius: 150px;
-  height: 250px;
-  width: 250px;
+    border: 5px solid #87C1AF;
+    border-radius: 150px;
+    height: 250px;
+    width: 250px;
 }
-
 .project-img {
-  height: 350px;
-  width: 350px;
-  margin-bottom: 20px;
-  border: 1px solid #15352B;
+    height: 350px;
+    width: 350px;
+    margin-bottom: 20px;
+    border: 1px solid #15352B;
 }
-
 p {
-  text-align: center;
+    text-align: center;
 }
